--- a/index.html
+++ b/index.html
@@ -4,89 +4,92 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body>
+  <body class="page">
+    <a href="" class="test-link">Тест линк</a>
     <!-- Шапка сайта -->
-    <header>
+    <header class="page-header">
       <nav>
-        <a href="/">
+        <a href="/" class="logo">
           <img src="./images/logo.svg" alt="Логотип компании" />
           photo
         </a>
 
-        <ul>
-          <li><a href="">Features</a></li>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Community</a></li>
-          <li><a href="/support.html">Support</a></li>
+        <ul class="site-nav list">
+          <li><a href="" class="link current">Features</a></li>
+          <li><a href="" class="link">Pricing</a></li>
+          <li><a href="./community.html" class="link">Community</a></li>
+          <li><a href="/support.html" class="link">Support</a></li>
         </ul>
 
-        <ul>
-          <li><a href="">Log in</a></li>
-          <li><a href="">Register</a></li>
+        <ul class="auth-nav list">
+          <li><a href="" class="button primary">Log in</a></li>
+          <li><a href="" class="button secondary">Register</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <!-- Герой -->
-      <section>
-        <h1>The largest community of photo enthusiasts</h1>
-        <a href="">Join today</a>
+      <section class="hero">
+        <h1 class="hero-title">The largest community of photo enthusiasts</h1>
+        <a href="" class="button primary">Join today</a>
       </section>
 
       <!-- Преимущества -->
-      <section>
-        <h2>Snap photos and share like <br />never before</h2>
+      <section class="section">
+        <h2 class="section-title">Snap photos and share like <br />never before</h2>
 
-        <ul>
+        <ul class="feature-list">
           <li>
-            <h3>Sed ut perspiciatis</h3>
+            <h3 class="title">Sed ut perspiciatis</h3>
             <p>
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
               voluptatem sequi nesciunt. Neque porro quisquam est.
             </p>
-            <a href="">Learn more</a>
+            <a href="" class="button secondary">Learn more</a>
           </li>
           <li>
-            <h3>Lorem ipsum dolor</h3>
+            <h3 class="title">Lorem ipsum dolor</h3>
             <p>
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
               voluptatem sequi nesciunt. Neque porro quisquam est.
             </p>
-            <a href="">Learn more</a>
+            <a href="" class="button secondary">Learn more</a>
           </li>
           <li>
-            <h3>Nemo enim ipsam</h3>
+            <h3 class="title">Nemo enim ipsam</h3>
             <p>
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
               voluptatem sequi nesciunt. Neque porro quisquam est.
             </p>
-            <a href="">Learn more</a>
+            <a href="" class="button secondary">Learn more</a>
           </li>
           <li>
-            <h3>Tempor incididunt</h3>
+            <h3 class="title">Tempor incididunt</h3>
             <p>
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
               voluptatem sequi nesciunt. Neque porro quisquam est.
             </p>
-            <a href="">Learn more</a>
+            <a href="" class="button secondary">Learn more</a>
           </li>
         </ul>
       </section>
 
       <!-- Примеры работ -->
-      <section>
-        <h2>Примеры работ</h2>
+      <section class="section">
+        <h2 class="section-title">Примеры работ</h2>
 
-        <ul>
+        <ul class="work-list">
           <li>
             <img src="./images/placeholder.png" alt="Зимний лес" width="750" />
-            <h3>Sed ut perspiciatis unde omnis</h3>
+            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
             <p>
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
@@ -95,7 +98,7 @@
           </li>
           <li>
             <img src="./images/placeholder.png" alt="Поле" width="750" />
-            <h3>Sed ut perspiciatis unde omnis</h3>
+            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
             <p>
               Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
               aut fugit, sed quia consequuntur magni dolores eos qui ratione
@@ -156,11 +159,112 @@
           </li>
         </ul>
       </section>
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati
+          officiis nihil quo molestias culpa. Aliquid dolor eius animi
+          accusantium totam. Eos vitae eaque quo non fuga deleniti corporis
+          deserunt porro.
+        </p>
+        <!-- я не джин :) -->
+        <div>
+          <a href="" class="button primary">Join Today</a>
+          <a href="" class="button secondary">Contact Us</a>
+        </div>
+      </section>
+      <!--  body вариант 2-->
+      <section>
+        <h2>Snap photos and share like never before</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime
+          explicabo perspiciatis minima quae maiores, magnam veniam tempora
+          assumenda in iste officia mollitia reiciendis totam repellat quia unde
+          repellendus similique corporis.
+        </p>
+        <ul>
+          <li>
+            <h3>Sed ut perspiticais</h3>
+            <p>
+              Eos vitae eaque quo non fuga deleniti corporis deserunt porro.
+            </p>
+          </li>
+          <li>
+            <h3>Sed ut perspiticais</h3>
+            <p>
+              Eos vitae eaque quo non fuga deleniti corporis deserunt porro.
+            </p>
+          </li>
+          <li>
+            <h3>Sed ut perspiticais</h3>
+            <p>
+              Eos vitae eaque quo non fuga deleniti corporis deserunt porro.
+            </p>
+          </li>
+        </ul>
+        <img src="" alt="" />
+      </section>
+      <!-- body вариант 3-->
+      <section>
+        <h2>Snap photos and share like never before</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime
+          explicabo perspiciatis minima quae maiores, magnam veniam tempora
+          assumenda in iste officia mollitia reiciendis totam repellat quia unde
+          repellendus similique corporis.
+          <ul>
+            <li>
+              <img src="" alt="квадрат" />
+              <h3>Sed ut perspiticais</h3>
+              <p>Eos vitae eaque quo non fuga deleniti corporis deserunt porro.</p>
+            </li>
+            <li>
+              <img src="" alt="квадрат" />
+              <h3>Sed ut perspiticais</h3>
+              <p>Eos vitae eaque quo non fuga deleniti corporis deserunt porro.</p>
+            </li>
+          </ul>
+          <img src="" alt="" />
+        </p>
+      </section>
     </main>
 
     <!-- Футер -->
     <footer>
-      Футер
+      <ul>
+        <li><a href="">Mobile app</a></li>
+        <li><a href="">Community</a></li>
+        <li><a href="">Company</a></li>
+      </ul>
+
+      <a href="/">
+        <img src="./images/logo.svg" alt="Логотип компании" />
+        photo
+      </a>
+
+      <ul>
+        <li><a href="">Help desk</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Resources</a></li>
+      </ul>
+
+      <ul>
+        <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+        <!-- специальная aria-label для любого тега, которая делает невидимым контент, но резервирует место для него-->
+        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+        <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+      </ul>
+      <p>&#169; Photo, Inc. 2019. We love or users!</p>
     </footer>
   </body>
 </html>
+
+
+
+<!-- this is how to create responsible picture-->
+<!-- <picture>
+          <source srcset="https://s3-us-west-2.amazonaws.com/s.cdpn.io/182774/large.jpg" media="(min-width: 1200px)" />
+          <source srcset="https://s3-us-west-2.amazonaws.com/s.cdpn.io/182774/medium.jpg" media="(min-width: 800px)" />
+          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/182774/small.jpg" />
+        </picture>
+        -->
