--- a/community.html
+++ b/community.html
@@ -3,18 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>Photo app</title>
     <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/community.css" />
+    <link rel="stylesheet" href="/css/community.css" />
   </head>
-
-  <body class="page">
-    <a href="" class="test-link">Тест линк</a>
+  <body>
     <!-- Шапка сайта -->
-    <header class="page-header">
+    <header>
       <nav>
-        <a href="/" class="logo">
+        <a href="./index.html" class="logo">
           <img src="./images/logo.svg" alt="Логотип компании" />
           photo
         </a>
@@ -23,7 +20,7 @@
           <li><a href="./index.html" class="link">Features</a></li>
           <li><a href="" class="link">Pricing</a></li>
           <li><a href="./community.html" class="link current">Community</a></li>
-          <li><a href="/support.html" class="link">Support</a></li>
+          <li><a href="" class="link">Support</a></li>
         </ul>
 
         <ul class="auth-nav list">
@@ -43,7 +40,7 @@
         <li><a href="">Company</a></li>
       </ul>
 
-      <a href="/">
+      <a href="./index.html">
         <img src="./images/logo.svg" alt="Логотип компании" />
         photo
       </a>
@@ -56,12 +53,12 @@
 
       <ul>
         <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-        <!-- специальная aria-label для любого тега, которая делает невидимым контент, но резервирует место для него-->
         <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
         <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
         <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
       </ul>
-      <p>&#169; Photo, Inc. 2019. We love or users!</p>
+
+      <p>&#169; Photo, Inc. 2019. We love our users!</p>
     </footer>
   </body>
 </html>
