--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Photo app</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body class="page">
-    <a href="" class="test-link">Тест линк</a>
+  <body>
     <!-- Шапка сайта -->
-    <header class="page-header">
-      <nav>
-        <a href="/" class="logo">
+    <header>
+      <nav class="container">
+        <a href="./index.html" class="logo">
           <img src="./images/logo.svg" alt="Логотип компании" />
           photo
         </a>
@@ -21,12 +23,12 @@
           <li><a href="" class="link current">Features</a></li>
           <li><a href="" class="link">Pricing</a></li>
           <li><a href="./community.html" class="link">Community</a></li>
-          <li><a href="/support.html" class="link">Support</a></li>
+          <li><a href="" class="link">Support</a></li>
         </ul>
 
         <ul class="auth-nav list">
-          <li><a href="" class="button primary">Log in</a></li>
-          <li><a href="" class="button secondary">Register</a></li>
+          <li><a href="" class="button secondary">Log in</a></li>
+          <li><a href="" class="button primary">Register</a></li>
         </ul>
       </nav>
     </header>
@@ -35,236 +37,230 @@
       <!-- Герой -->
       <section class="hero">
         <h1 class="hero-title">The largest community of photo enthusiasts</h1>
-        <a href="" class="button primary">Join today</a>
+        <a href="" class="button primary hero-btn">Join today</a>
       </section>
 
       <!-- Преимущества -->
       <section class="section">
-        <h2 class="section-title">Snap photos and share like <br />never before</h2>
+        <div class="container">
+          <h2 class="section-title">
+            Snap photos and share like <br />never before
+          </h2>
 
-        <ul class="feature-list">
-          <li>
-            <h3 class="title">Sed ut perspiciatis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Lorem ipsum dolor</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Nemo enim ipsam</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-          <li>
-            <h3 class="title">Tempor incididunt</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est.
-            </p>
-            <a href="" class="button secondary">Learn more</a>
-          </li>
-        </ul>
+          <ul class="feature-list list">
+            <li>
+              <h3 class="title">Sed ut perspiciatis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Lorem ipsum dolor</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Nemo enim ipsam</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+            <li>
+              <h3 class="title">Tempor incididunt</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est.
+              </p>
+              <a href="" class="button secondary">Learn more</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Примеры работ -->
-      <section class="section">
-        <h2 class="section-title">Примеры работ</h2>
-
-        <ul class="work-list">
-          <li>
-            <img src="./images/placeholder.png" alt="Зимний лес" width="750" />
-            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-            </p>
-          </li>
-          <li>
-            <img src="./images/placeholder.png" alt="Поле" width="750" />
-            <h3 class="title">Sed ut perspiciatis unde omnis</h3>
-            <p>
-              Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-              aut fugit, sed quia consequuntur magni dolores eos qui ratione
-              voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.
-            </p>
-          </li>
-        </ul>
-      </section>
-
-      <!-- Testimonials -->
-      <section>
-        <h2>You’re in good company</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore
-        </p>
-
-        <ul>
-          <li>
-            <a href=""
-              ><img src="./images/icon.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/icon.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/icon.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/icon.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/icon.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/icon.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/icon.svg" alt="Логотип компании"
-            /></a>
-          </li>
-          <li>
-            <a href=""
-              ><img src="./images/icon.svg" alt="Логотип компании"
-            /></a>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati
-          officiis nihil quo molestias culpa. Aliquid dolor eius animi
-          accusantium totam. Eos vitae eaque quo non fuga deleniti corporis
-          deserunt porro.
-        </p>
-        <!-- я не джин :) -->
-        <div>
-          <a href="" class="button primary">Join Today</a>
-          <a href="" class="button secondary">Contact Us</a>
-        </div>
-      </section>
-      <!--  body вариант 2-->
-      <section>
-        <h2>Snap photos and share like never before</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime
-          explicabo perspiciatis minima quae maiores, magnam veniam tempora
-          assumenda in iste officia mollitia reiciendis totam repellat quia unde
-          repellendus similique corporis.
-        </p>
-        <ul>
-          <li>
-            <h3>Sed ut perspiticais</h3>
-            <p>
-              Eos vitae eaque quo non fuga deleniti corporis deserunt porro.
-            </p>
-          </li>
-          <li>
-            <h3>Sed ut perspiticais</h3>
-            <p>
-              Eos vitae eaque quo non fuga deleniti corporis deserunt porro.
-            </p>
-          </li>
-          <li>
-            <h3>Sed ut perspiticais</h3>
-            <p>
-              Eos vitae eaque quo non fuga deleniti corporis deserunt porro.
-            </p>
-          </li>
-        </ul>
-        <img src="" alt="" />
-      </section>
-      <!-- body вариант 3-->
-      <section>
-        <h2>Snap photos and share like never before</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime
-          explicabo perspiciatis minima quae maiores, magnam veniam tempora
-          assumenda in iste officia mollitia reiciendis totam repellat quia unde
-          repellendus similique corporis.
-          <ul>
-            <li>
-              <img src="" alt="квадрат" />
-              <h3>Sed ut perspiticais</h3>
-              <p>Eos vitae eaque quo non fuga deleniti corporis deserunt porro.</p>
+      <section class="section section-no-padding">
+        <div class="container">
+          <h2 class="section-title">Examples</h2>
+          <ul class="work-list list">
+            <li class="item">
+              <img
+                src="./images/placeholder.png"
+                alt="Зимний лес"
+                width="750"
+              />
+              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est, qui
+                dolorem.
+              </p>
             </li>
-            <li>
-              <img src="" alt="квадрат" />
-              <h3>Sed ut perspiticais</h3>
-              <p>Eos vitae eaque quo non fuga deleniti corporis deserunt porro.</p>
+            <li class="item">
+              <img src="./images/placeholder.png" alt="Поле" width="750" />
+              <h3 class="title">Sed ut perspiciatis unde omnis</h3>
+              <p>
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est, qui
+                dolorem.
+              </p>
             </li>
           </ul>
-          <img src="" alt="" />
-        </p>
+        </div>
+      </section>
+
+      <!-- Клиенты -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title section-title-centred">
+            You’re in good company
+          </h2>
+          <p class="section-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore
+          </p>
+
+          <ul class="list">
+            <li>
+              <a href=""
+                ><img src="./images/client.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/client.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/client.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/client.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/client.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/client.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/client.svg" alt="Логотип компании"
+              /></a>
+            </li>
+            <li>
+              <a href=""
+                ><img src="./images/client.svg" alt="Логотип компании"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Регистрация -->
+      <section class="section">
+        <div class="container registration-box">
+          <p class="section-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore
+          </p>
+
+          <div>
+            <a href="" class="button primary">Join Today</a>
+            <a href="" class="button secondary">Contact us</a>
+          </div>
+        </div>
       </section>
     </main>
 
     <!-- Футер -->
-    <footer>
-      <ul>
-        <li><a href="">Mobile app</a></li>
-        <li><a href="">Community</a></li>
-        <li><a href="">Company</a></li>
-      </ul>
+    <footer class="page-footer">
+      <div class="container section">
+        <a href="./index.html" class="logo">
+          <img src="./images/logo.svg" alt="Логотип компании" />
+          photo
+        </a>
+        <section>
+          <h2 class="hidden">External links</h2>
 
-      <a href="/">
-        <img src="./images/logo.svg" alt="Логотип компании" />
-        photo
-      </a>
+          <h3>Mobile app</h3>
+          <ul class="list">
+            <a href="">
+              <li>Features</li>
+            </a>
+            <a href="">
+              <li>Live share</li>
+            </a>
+            <a href="">
+              <li>Video record</li>
+            </a>
+          </ul>
 
-      <ul>
-        <li><a href="">Help desk</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Resources</a></li>
-      </ul>
+          <h3>Community</h3>
+          <ul class="list">
+            <a href="">
+              <li>Featured artists</li>
+            </a>
+            <a href="">
+              <li>The Portal</li>
+            </a>
+            <a href="">
+              <li>Live events</li>
+            </a>
+          </ul>
 
-      <ul>
-        <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-        <!-- специальная aria-label для любого тега, которая делает невидимым контент, но резервирует место для него-->
-        <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-        <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-        <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
-      </ul>
-      <p>&#169; Photo, Inc. 2019. We love or users!</p>
+          <h3>Company</h3>
+          <ul class="list">
+            <a href="">
+              <li>About us</li>
+            </a>
+            <a href="">
+              <li>Contact us</li>
+            </a>
+            <a href="">
+              <li>History</li>
+            </a>
+          </ul>
+
+          <ul class="auth-nav list">
+            <li><a href="" class="button primary">Register</a></li>
+
+            <li><a href="" class="button secondary">Log in</a></li>
+          </ul>
+
+          <p class="copyright">&#169; Photo, Inc. 2019. We love our users!</p>
+
+          <div class="social">
+            <p class="social-label">Follow us:</p>
+            <ul class="list">
+              <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
+              <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
+              <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
+              <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+            </ul>
+          </div>
+        </section>
+      </div>
     </footer>
   </body>
 </html>
-
-
-
-<!-- this is how to create responsible picture-->
-<!-- <picture>
-          <source srcset="https://s3-us-west-2.amazonaws.com/s.cdpn.io/182774/large.jpg" media="(min-width: 1200px)" />
-          <source srcset="https://s3-us-west-2.amazonaws.com/s.cdpn.io/182774/medium.jpg" media="(min-width: 800px)" />
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/182774/small.jpg" />
-        </picture>
-        -->
